<?xml version="1.0" encoding="utf-8"?>
<!--<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20dp"
    android:layout_gravity="center_horizontal">-->
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <!--<CalendarView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/calendarView"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            app:layout_constraintHorizontal_bias="0.488"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/title"/>-->

        <TextView
            android:id="@+id/calendar_year_month_text"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="2020년 01월"
            android:textSize="25sp"
            android:textStyle="bold"
            android:gravity="center_vertical|start"
            android:layout_marginStart="20dp"
            style="@style/TextViewStyle"/>

        <View
            android:id="@+id/div"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            style="@style/LineView"/>

        <LinearLayout
            android:id="@+id/calendar_header"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">
            <TextView android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:text="@string/SUN"
                style="@style/TextViewStyle"/>
            <TextView android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:text="@string/MON"
                style="@style/TextViewStyle"/>
            <TextView android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:text="@string/TUE"
                style="@style/TextViewStyle"/>
            <TextView android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:text="@string/WED"
                style="@style/TextViewStyle"/>
            <TextView android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:text="@string/THU"
                style="@style/TextViewStyle"/>
            <TextView android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:text="@string/FRI"
                style="@style/TextViewStyle"/>
            <TextView android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:text="@string/SAT"
                style="@style/TextViewStyle"/>

        </LinearLayout>
        <LinearLayout
            android:id="@+id/calendar_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/calendar_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:spanCount="7"
                android:adjustViewBounds="true"
                app:layout_constrainedHeight="true"
                tools:listitem="@layout/list_item_calendar"/>
        </LinearLayout>
    </LinearLayout>

<!-- </androidx.constraintlayout.widget.ConstraintLayout>-->
